--- a/src/components/mainApp/UsersPage/UsersPage.css
+++ b/src/components/mainApp/UsersPage/UsersPage.css
@@ -1,4 +1,4 @@
-.users-board{
+.users-board {
   width: 75vw;
   height: 100%;
   min-height: 85vh;
@@ -6,4 +6,22 @@
   background-color: rgb(228, 234, 255);
   border-radius: 1rem;
   display: flex;
+}
+
+.table-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-inline: 1rem;
+  width: 100%;
+  border-left: 1px solid #ccc;
+}
+
+.table-header:last-child {
+  border-right: 1px solid #ccc;
+}
+
+.header-text {
+  text-align: center;
+  margin-right: 8px; 
 }
