--- a/src/components/mainApp/UsersPage/UsersPage.css
+++ b/src/components/mainApp/UsersPage/UsersPage.css
@@ -3,6 +3,7 @@
   height: 100%;
   min-height: 85vh;
   padding: 1.5rem;
+  margin-bottom: 3rem;
   background-color: rgb(228, 234, 255);
   border-radius: 1rem;
   display: flex;
