--- a/src/components/mainApp/UsersPage/UsersPage.css
+++ b/src/components/mainApp/UsersPage/UsersPage.css
@@ -1,7 +1,7 @@
 .users-board {
   width: 75vw;
   height: 100%;
-  min-height: 85vh;
+  /* min-height: 85vh; */
   padding: 1.5rem;
   margin-bottom: 3rem;
   background-color: rgb(228, 234, 255);
